--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
 /.terraform
-/.terraform/plugins/windows_amd64
-/.terraform/plugins/windows_amd64/terraform-provider-random_v2.2.1_x4.exe
-/.terraform/plugins/windows_amd64/terraform-provider-aws_v2.55.0_x4.exe
-/.terraform/plugins/windows_amd64/lock.json
+terraform.*
